Pridana barva pozadi, fonty, logo hlavicky

--- a/web/style.css
+++ b/web/style.css
@@ -1,11 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Playfair+Display:700&display=swap&subset=latin-ext');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300|Playfair+Display:700&display=swap&subset=latin-ext");
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 15px;
 }
 
 h1,
 h2 {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
+}
+
+body {
+  background-color: #ffefef;
+}
+
+h1,
+h2 {
+  font-family: "Playfair Display", sans-serif;
+}
+
+.main_page {
+  background-color: #ffffff;
 }
