--- a/web/style.css
+++ b/web/style.css
@@ -12,6 +12,7 @@ h2 {
 
 body {
   background-color: #ffefef;
+  margin: 0;
 }
 
 h1,
@@ -21,4 +22,11 @@ h2 {
 
 .main_page {
   background-color: #ffffff;
+}
+
+.header {
+  text-align: center;
+  font-size: 1.5rem;
+  width: 40%;
+  margin: 0 auto;
 }
