--- a/web/style.css
+++ b/web/style.css
@@ -27,7 +27,7 @@ h2 {
 .header {
   text-align: center;
   font-size: 1.5rem;
-  width: 40%;
+  width: 30%;
   margin: 0 auto;
   padding: 50px 0;
 }
@@ -47,7 +47,7 @@ h2 {
 .offer_header {
   text-align: center;
   padding: 50px 0;
-  width: 50%;
+  width: 35%;
 }
 
 .offer_header h1 {
@@ -55,7 +55,7 @@ h2 {
 }
 
 .offer_header p {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .offer_photos {
@@ -80,4 +80,78 @@ h2 {
 .container2 {
   width: 45%;
   padding: 80px 0;
+}
+
+.paragraph {
+  padding-bottom: 30px;
+}
+
+.menu h2 {
+  font-size: 2.2rem;
+}
+
+.menu p {
+  font-size: 1.1rem;
+}
+
+.menu img {
+  flex: 1 1 auto;
+  width: 40%;
+}
+
+.menu_text1,
+.menu_text2,
+.menu_text3 {
+  flex: 1 1 auto;
+  padding: 0 80px;
+}
+
+.menu_text2 {
+  text-align: right;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.container3,
+.container4,
+.container5 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 30px;
+}
+
+.dish2 {
+  order: 2;
+}
+
+button {
+  background-color: #ffefef;
+  color: #000000;
+  padding: 12px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 100;
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+}
+
+.footer {
+  color: grey;
+  text-align: center;
+}
+
+.footer p {
+  display: inline-block;
+  width: 35%;
+  padding: 50px 0;
 }
